# python-pacwrap

./: .bumpversion.cfg  .cspell.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG-dev.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  justfile  local-test-env.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.chglog/: config.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: pr-ci.yml  test.yml
attic/docs/: old-CHANGELOG.md
docs/: Makefile
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst
pacwrap/: __init__.py  apt.py  cli.py  constants.py  dnf.py  mkhandler.py  options.py  pacman.py  pkgmgr.py  pkgmgrs.py  yum.py
tests/: test_cli.py  test_cli_debug_option.py  test_dnf_handler.py  test_mkhandler.py  test_options.py  test_pacman_handler.py  test_pkgmgr.py  test_yum_handler.py
