[tool.poetry]
name = "pacwrap"
description = "Provides single interface to several common Linux package managers."
version = "0.6.1-dev3"
license = "MIT"

authors = ["Quien Sabe <qs5779@mail.com>"]

readme = "README.md"

homepage = "https://github.com/wtfo-guru/pacwrap"
documentation = "https://python-pacwrap.readthedocs.io/en/stable"

keywords = []

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.scripts]
pacwrap = "pacwrap.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.0"
distro = "^1.9"
wtforglib = "^1.0.0"
cmp-version = "^3.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^1.0.0"
flake8-pytest-style = ">=1.6,<3.0"
doc8 = "^1.0"
docutils = ">=0.19,<0.21"
nitpick = "^0.35"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.13"
isort = "^5.13"
black = ">=22.12,<25.0"
requests-cache = ">=0.9,<1.3"
jmespath = "^1.0"
pytest-click = "^1.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.19,<3.0"
tomli = "^2.0"
m2r2 = "^0.3.3.post2"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
