[project]
name = "pacwrap"
description = "Provides single interface to several common Linux package managers."
license = "MIT"
keywords = []
version = "0.6.1-dev11"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = ['click (>=8.1.0,<9.0.0)', 'distro (>=1.9,<2.0)', 'wtforglib (>=1.0.0,<2.0.0)', 'cmp-version (>=3.0.0,<4.0.0)']

[project.urls]
homepage = "https://github.com/wtfo-guru/pacwrap"
documentation = "https://python-pacwrap.readthedocs.io/en/stable"

[project.scripts]
pacwrap = "pacwrap.cli:main"

[tool.poetry]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
  "Typing :: Typed",
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^1.0"
flake8-pytest-style = ">=1.6,<3.0"
doc8 = "^2.0"
docutils = ">=0.19,<0.21"
pytest = ">=7.4,<9.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.13"
isort = "^6.0"
black = "^25.0"
requests-cache = ">=0.9,<1.3"
jmespath = "^1.0"
pytest-click = "^1.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.0"
sphinx_mdinclude = "^0.6.2"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
